src/dtd.output
Terminals unused in grammar

   OPEN
   EMPTY
   ANY


State 11 conflicts: 3 shift/reduce
State 12 conflicts: 3 shift/reduce


Grammar

    0 $accept: main $end

    1 main: main attlist
    2     | main element
    3     | /* empty */

    4 attlist: ATTLIST NAME att_definition CLOSE

    5 element: ELEMENT NAME choice_or_sequence CLOSE

    6 choice_or_sequence: choice cardinality
    7                   | sequence cardinality

    8 sequence: OPENPAR list_sequence CLOSEPAR

    9 choice: OPENPAR list_choice_plus CLOSEPAR

   10 list_choice_plus: list_choice PIPE item

   11 list_choice: item
   12            | list_choice PIPE item

   13 list_sequence: item
   14              | list_sequence COMMA item

   15 item: NAME cardinality
   16     | PCDATA
   17     | choice_or_sequence cardinality

   18 cardinality: AST
   19            | QMARK
   20            | PLUS
   21            | /* empty */

   22 att_definition: att_definition attribut
   23               | /* empty */

   24 attribut: NAME att_type defaut_declaration

   25 att_type: CDATA
   26         | TOKENTYPE
   27         | type_enumere

   28 type_enumere: OPENPAR liste_enum_plus CLOSEPAR

   29 liste_enum_plus: liste_enum PIPE item_enum

   30 liste_enum: item_enum
   31           | liste_enum PIPE item_enum

   32 item_enum: NAME

   33 defaut_declaration: DECLARATION
   34                   | STRING
   35                   | FIXED STRING


Terminals, with rules where they appear

$end (0) 0
error (256)
ELEMENT (258) 5
ATTLIST (259) 4
OPEN (260)
CLOSE (261) 4 5
OPENPAR (262) 8 9 28
CLOSEPAR (263) 8 9 28
COMMA (264) 14
PIPE (265) 10 12 29 31
FIXED (266) 35
EMPTY (267)
ANY (268)
PCDATA (269) 16
AST (270) 18
QMARK (271) 19
PLUS (272) 20
CDATA (273) 25
NAME (274) 4 5 15 24 32
TOKENTYPE (275) 26
DECLARATION (276) 33
STRING (277) 34 35


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
main (24)
    on left: 1 2 3, on right: 0 1 2
attlist (25)
    on left: 4, on right: 1
element (26)
    on left: 5, on right: 2
choice_or_sequence (27)
    on left: 6 7, on right: 5 17
sequence (28)
    on left: 8, on right: 7
choice (29)
    on left: 9, on right: 6
list_choice_plus (30)
    on left: 10, on right: 9
list_choice (31)
    on left: 11 12, on right: 10 12
list_sequence (32)
    on left: 13 14, on right: 8 14
item (33)
    on left: 15 16 17, on right: 10 11 12 13 14
cardinality (34)
    on left: 18 19 20 21, on right: 6 7 15 17
att_definition (35)
    on left: 22 23, on right: 4 22
attribut (36)
    on left: 24, on right: 22
att_type (37)
    on left: 25 26 27, on right: 24
type_enumere (38)
    on left: 28, on right: 27
liste_enum_plus (39)
    on left: 29, on right: 28
liste_enum (40)
    on left: 30 31, on right: 29 31
item_enum (41)
    on left: 32, on right: 29 30 31
defaut_declaration (42)
    on left: 33 34 35, on right: 24


state 0

    0 $accept: . main $end

    $default  reduce using rule 3 (main)

    main  go to state 1


state 1

    0 $accept: main . $end
    1 main: main . attlist
    2     | main . element

    $end     shift, and go to state 2
    ELEMENT  shift, and go to state 3
    ATTLIST  shift, and go to state 4

    attlist  go to state 5
    element  go to state 6


state 2

    0 $accept: main $end .

    $default  accept


state 3

    5 element: ELEMENT . NAME choice_or_sequence CLOSE

    NAME  shift, and go to state 7


state 4

    4 attlist: ATTLIST . NAME att_definition CLOSE

    NAME  shift, and go to state 8


state 5

    1 main: main attlist .

    $default  reduce using rule 1 (main)


state 6

    2 main: main element .

    $default  reduce using rule 2 (main)


state 7

    5 element: ELEMENT NAME . choice_or_sequence CLOSE

    OPENPAR  shift, and go to state 9

    choice_or_sequence  go to state 10
    sequence            go to state 11
    choice              go to state 12


state 8

    4 attlist: ATTLIST NAME . att_definition CLOSE

    $default  reduce using rule 23 (att_definition)

    att_definition  go to state 13


state 9

    8 sequence: OPENPAR . list_sequence CLOSEPAR
    9 choice: OPENPAR . list_choice_plus CLOSEPAR

    OPENPAR  shift, and go to state 9
    PCDATA   shift, and go to state 14
    NAME     shift, and go to state 15

    choice_or_sequence  go to state 16
    sequence            go to state 11
    choice              go to state 12
    list_choice_plus    go to state 17
    list_choice         go to state 18
    list_sequence       go to state 19
    item                go to state 20


state 10

    5 element: ELEMENT NAME choice_or_sequence . CLOSE

    CLOSE  shift, and go to state 21


state 11

    7 choice_or_sequence: sequence . cardinality

    AST    shift, and go to state 22
    QMARK  shift, and go to state 23
    PLUS   shift, and go to state 24

    AST       [reduce using rule 21 (cardinality)]
    QMARK     [reduce using rule 21 (cardinality)]
    PLUS      [reduce using rule 21 (cardinality)]
    $default  reduce using rule 21 (cardinality)

    cardinality  go to state 25


state 12

    6 choice_or_sequence: choice . cardinality

    AST    shift, and go to state 22
    QMARK  shift, and go to state 23
    PLUS   shift, and go to state 24

    AST       [reduce using rule 21 (cardinality)]
    QMARK     [reduce using rule 21 (cardinality)]
    PLUS      [reduce using rule 21 (cardinality)]
    $default  reduce using rule 21 (cardinality)

    cardinality  go to state 26


state 13

    4 attlist: ATTLIST NAME att_definition . CLOSE
   22 att_definition: att_definition . attribut

    CLOSE  shift, and go to state 27
    NAME   shift, and go to state 28

    attribut  go to state 29


state 14

   16 item: PCDATA .

    $default  reduce using rule 16 (item)


state 15

   15 item: NAME . cardinality

    AST    shift, and go to state 22
    QMARK  shift, and go to state 23
    PLUS   shift, and go to state 24

    $default  reduce using rule 21 (cardinality)

    cardinality  go to state 30


state 16

   17 item: choice_or_sequence . cardinality

    AST    shift, and go to state 22
    QMARK  shift, and go to state 23
    PLUS   shift, and go to state 24

    $default  reduce using rule 21 (cardinality)

    cardinality  go to state 31


state 17

    9 choice: OPENPAR list_choice_plus . CLOSEPAR

    CLOSEPAR  shift, and go to state 32


state 18

   10 list_choice_plus: list_choice . PIPE item
   12 list_choice: list_choice . PIPE item

    PIPE  shift, and go to state 33


state 19

    8 sequence: OPENPAR list_sequence . CLOSEPAR
   14 list_sequence: list_sequence . COMMA item

    CLOSEPAR  shift, and go to state 34
    COMMA     shift, and go to state 35


state 20

   11 list_choice: item .
   13 list_sequence: item .

    PIPE      reduce using rule 11 (list_choice)
    $default  reduce using rule 13 (list_sequence)


state 21

    5 element: ELEMENT NAME choice_or_sequence CLOSE .

    $default  reduce using rule 5 (element)


state 22

   18 cardinality: AST .

    $default  reduce using rule 18 (cardinality)


state 23

   19 cardinality: QMARK .

    $default  reduce using rule 19 (cardinality)


state 24

   20 cardinality: PLUS .

    $default  reduce using rule 20 (cardinality)


state 25

    7 choice_or_sequence: sequence cardinality .

    $default  reduce using rule 7 (choice_or_sequence)


state 26

    6 choice_or_sequence: choice cardinality .

    $default  reduce using rule 6 (choice_or_sequence)


state 27

    4 attlist: ATTLIST NAME att_definition CLOSE .

    $default  reduce using rule 4 (attlist)


state 28

   24 attribut: NAME . att_type defaut_declaration

    OPENPAR    shift, and go to state 36
    CDATA      shift, and go to state 37
    TOKENTYPE  shift, and go to state 38

    att_type      go to state 39
    type_enumere  go to state 40


state 29

   22 att_definition: att_definition attribut .

    $default  reduce using rule 22 (att_definition)


state 30

   15 item: NAME cardinality .

    $default  reduce using rule 15 (item)


state 31

   17 item: choice_or_sequence cardinality .

    $default  reduce using rule 17 (item)


state 32

    9 choice: OPENPAR list_choice_plus CLOSEPAR .

    $default  reduce using rule 9 (choice)


state 33

   10 list_choice_plus: list_choice PIPE . item
   12 list_choice: list_choice PIPE . item

    OPENPAR  shift, and go to state 9
    PCDATA   shift, and go to state 14
    NAME     shift, and go to state 15

    choice_or_sequence  go to state 16
    sequence            go to state 11
    choice              go to state 12
    item                go to state 41


state 34

    8 sequence: OPENPAR list_sequence CLOSEPAR .

    $default  reduce using rule 8 (sequence)


state 35

   14 list_sequence: list_sequence COMMA . item

    OPENPAR  shift, and go to state 9
    PCDATA   shift, and go to state 14
    NAME     shift, and go to state 15

    choice_or_sequence  go to state 16
    sequence            go to state 11
    choice              go to state 12
    item                go to state 42


state 36

   28 type_enumere: OPENPAR . liste_enum_plus CLOSEPAR

    NAME  shift, and go to state 43

    liste_enum_plus  go to state 44
    liste_enum       go to state 45
    item_enum        go to state 46


state 37

   25 att_type: CDATA .

    $default  reduce using rule 25 (att_type)


state 38

   26 att_type: TOKENTYPE .

    $default  reduce using rule 26 (att_type)


state 39

   24 attribut: NAME att_type . defaut_declaration

    FIXED        shift, and go to state 47
    DECLARATION  shift, and go to state 48
    STRING       shift, and go to state 49

    defaut_declaration  go to state 50


state 40

   27 att_type: type_enumere .

    $default  reduce using rule 27 (att_type)


state 41

   10 list_choice_plus: list_choice PIPE item .
   12 list_choice: list_choice PIPE item .

    PIPE      reduce using rule 12 (list_choice)
    $default  reduce using rule 10 (list_choice_plus)


state 42

   14 list_sequence: list_sequence COMMA item .

    $default  reduce using rule 14 (list_sequence)


state 43

   32 item_enum: NAME .

    $default  reduce using rule 32 (item_enum)


state 44

   28 type_enumere: OPENPAR liste_enum_plus . CLOSEPAR

    CLOSEPAR  shift, and go to state 51


state 45

   29 liste_enum_plus: liste_enum . PIPE item_enum
   31 liste_enum: liste_enum . PIPE item_enum

    PIPE  shift, and go to state 52


state 46

   30 liste_enum: item_enum .

    $default  reduce using rule 30 (liste_enum)


state 47

   35 defaut_declaration: FIXED . STRING

    STRING  shift, and go to state 53


state 48

   33 defaut_declaration: DECLARATION .

    $default  reduce using rule 33 (defaut_declaration)


state 49

   34 defaut_declaration: STRING .

    $default  reduce using rule 34 (defaut_declaration)


state 50

   24 attribut: NAME att_type defaut_declaration .

    $default  reduce using rule 24 (attribut)


state 51

   28 type_enumere: OPENPAR liste_enum_plus CLOSEPAR .

    $default  reduce using rule 28 (type_enumere)


state 52

   29 liste_enum_plus: liste_enum PIPE . item_enum
   31 liste_enum: liste_enum PIPE . item_enum

    NAME  shift, and go to state 43

    item_enum  go to state 54


state 53

   35 defaut_declaration: FIXED STRING .

    $default  reduce using rule 35 (defaut_declaration)


state 54

   29 liste_enum_plus: liste_enum PIPE item_enum .
   31 liste_enum: liste_enum PIPE item_enum .

    PIPE      reduce using rule 31 (liste_enum)
    $default  reduce using rule 29 (liste_enum_plus)
